k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: colorbox-gateway
  namespace: mdata-toolkit
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 9080
      protocol: HTTP
      hostname: colorbox.intel.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: colorbox-route
  namespace: mdata-toolkit
spec:
  parentRefs:
    - name: colorbox-gateway
  hostnames:
    - colorbox.intel.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: colorbox
          port: 80
